# JuliaSetCpp

./: .gitignore  CMakeLists.txt
res/Shaders/: julia.fs  julia.vs  text.fs  text.vs
src/: GlfwErrorHandler.h  JuliaEnums.h  JuliaSet.cpp  JuliaSet.cu  KeyCallback.h  Main.cpp  TextRendering.cpp  WindowInit.h
src/API/: GL_Backend.cpp  GL_Backend.h  GL_Shader.h
src/Backend/: Backend.cpp  Backend.h  GLFW.cpp  GLFW.h
src/Imgui/: ImguiService.cpp  ImguiService.h
src/JuliaSet/: JuliaKernels.cu  JuliaService.cpp  JuliaService.h
src/Misc/: filesystem.h  root_directory.h.in
src/UI/: FpsService.cpp  FpsService.h  TextRenderer.cpp  TextRenderer.h
src/UserInput/: UserInput.cpp  UserInput.h
src/ViewPort/: Viewport.cpp  Viewport.h  ViewportService.cpp  ViewportService.h
